# hitbox

./: .gitignore  .rustfmt.toml  .travis.yml  BUFFERED_BODY_IMPLEMENTATION.md  Cargo.toml  README.md  release.toml  state.rs.back  test-coverage-checklist.md
actix-cache-redis/: Cargo.toml
actix-cache-redis/src/: actor.rs  error.rs  lib.rs
actix-cache-redis/tests/: integration_test.rs
examples/: Cargo.toml  actix_web.rs  async_backend.rs  cacheable_response.rs  debug.rs  metrics.rs  release.toml  sync_backend.rs
examples/examples/: actix_web.rs  async_backend.rs  axum.rs  backend.rs  cacheable_response.rs  debug.rs  dyn_backend.rs  metrics.rs  redis.rs  sync_backend.rs  tower.rs
hitbox/: CHANGELOG.md  Cargo.toml  README.md
hitbox-actix/: CHANGELOG.md  Cargo.toml  README.md
hitbox-actix/src/: actor.rs  builder.rs  handlers.rs  lib.rs  messages.rs  runtime.rs
hitbox-actix/tests/: test_cache_key.rs  test_mock_backend.rs  test_proxy_actor.rs  test_redis_backend.rs
hitbox-axum/: CHANGELOG.md  Cargo.toml  README.md
hitbox-axum/src/: adapter.rs  cacheable.rs  cacheable_response.rs  config.rs  layer.rs  lib.rs  service.rs
hitbox-backend/: CHANGELOG.md  Cargo.toml  README.md
hitbox-backend/benches/: key_size.rs
hitbox-backend/examples/: key_format_usage.rs
hitbox-backend/src/: backend.rs  compressor.rs  key.rs  lib.rs  predicates.rs  response.rs  response2.rs  serializer.rs  value.rs
hitbox-backend/tests/: erased.rs  key_format_test.rs
hitbox-configuration/: Cargo.toml
hitbox-configuration/src/: backend.rs  body.rs  cache.rs  config.rs  configuration.rs  endpoint.rs  error.rs  field.rs  group.rs  headers.rs  lib.rs  policy.rs  query.rs  request.rs  response.rs  server.rs  status_code.rs  test.yaml  types.rs  upstream.rs
hitbox-configuration/src/backend/: mod.rs
hitbox-configuration/src/extractors/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs
hitbox-configuration/src/predicates/: request.rs  response.rs
hitbox-configuration/src/validation/: error.rs  formatting.rs  mod.rs  schema.rs  yaml.rs
hitbox-configuration/tests/: test_backend.rs  test_backend_instantiation.rs  test_configuration.rs  test_extractors.rs  test_reponse.rs  test_request.rs
hitbox-core/: Cargo.toml
hitbox-core/src/: config.rs  extractor.rs  key.rs  lib.rs  policy.rs  predicate.rs  request.rs  response.rs  time_provider.rs  value.rs
hitbox-core/tests/: response.rs
hitbox-derive/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
hitbox-derive/src/: cacheable_macro.rs  cacheable_response_macro.rs  container.rs  lib.rs  macro_attributes.rs
hitbox-feoxdb/: Cargo.toml
hitbox-feoxdb/src/: backend.rs  error.rs  lib.rs
hitbox-http/: Cargo.toml  README.md
hitbox-http/benches/: predicate_performance.rs
hitbox-http/src/: body.rs  body_processing.rs  lib.rs  predicates.rs  query.rs  request.rs  response.rs
hitbox-http/src/extractors/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs
hitbox-http/src/predicates/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs  status_code.rs
hitbox-http/tests/: buffered_body.rs  mod.rs  predicates.rs  test_response_serialization.rs
hitbox-http/tests/cache_policy/: mod.rs  request.rs
hitbox-http/tests/extractors/: header.rs  method.rs  mod.rs  multiple.rs  path.rs  query.rs
hitbox-http/tests/predicates/: conditions.rs  mod.rs
hitbox-moka/: Cargo.toml
hitbox-moka/src/: backend.rs  builder.rs  lib.rs
hitbox-redis/: CHANGELOG.md  Cargo.toml  README.md
hitbox-redis/examples/: configurable_key_format.rs  full_configuration.rs
hitbox-redis/src/: actor.rs  backend.rs  error.rs  lib.rs
hitbox-redis/src/builder/: cluster.rs  mod.rs  sentinel.rs  standalone.rs
hitbox-redis/tests/: integration_test.rs
hitbox-stretto/: Cargo.toml
hitbox-stretto/src/: backend.rs  builder.rs  error.rs  lib.rs
hitbox-tarantool/: CHANGELOG.md  Cargo.toml  LICENSE  TODO.md
hitbox-tarantool/src/: backend.rs  init.lua  lib.rs
hitbox-tarantool/tests/: integration_test.rs
hitbox-test/: BDD_TEST_PLAN.md  Cargo.toml  README.md  TEST_PLAN.md  TEST_PLAN_RESPONSE.md  TODO.md  data.yaml  test-cases.md  test.md
hitbox-test/docs/: BDD_TEST_PLAN_OVERVIEW.md
hitbox-test/examples/: mock_time_cache_ttl.rs  mock_time_demo.rs  mock_time_usage.feature
hitbox-test/src/: app.rs  cache_key.rs  core.rs  handlers.rs  lib.rs  old-steps.rs  steps.rs  time.rs
hitbox-test/src/backend/: mod.rs
hitbox-test/src/steps/: given.rs  mod.rs  then.rs  when.rs
hitbox-test/src/time/: cache_helpers.rs  mock_provider.rs
hitbox-test/tests/: integration.rs  mock_time_integration.rs  mod.rs
hitbox-test/tests/features/: basic.feature  cache-key-body-extractor.feature  cache-key-extractor-combinations.feature  cache-key-header-extractor.feature  cache-key-method-extractor.feature  cache-key-path-extractor.feature  cache-key-query-extractor.feature  cache-policy.feature  error-response.feature  extended.feature  header-predicates.feature  logical-and-predicate.feature  logical-complex-combinations.feature  logical-not-predicate.feature  (+11 more)
hitbox-tokio/: Cargo.toml
hitbox-tokio/src/: cache.rs  lib.rs  runtime.rs
hitbox-tower/: Cargo.toml
hitbox-tower/benches/: cache_service_benchmark.rs
hitbox-tower/src/: cache_config.rs  config.rs  configurable.rs  dummy.rs  future.rs  layer.rs  lib.rs  request_extractor.rs  request_predicate.rs  response_predicate.rs  runtime.rs  service.rs  state.rs
hitbox/diagrams/: only_cache.puml  stale.puml  upstream.puml
hitbox/src/: _dev.rs  actor.rs  backend.rs  builder.rs  cache.rs  config.rs  error.rs  lib.rs  lock_manager.rs  metrics.rs  policy.rs  predicates.rs  response.rs  settings.rs  value.rs
hitbox/tests/: cache_key.rs  cacheable_derive.rs  cacheable_response_derive.rs  metrics.rs  metrics.rs.pass  mod.rs  response.rs  settings.rs  test_cache_key.rs  test_cacheable_response_derive.rs  test_metrics.rs  test_mock_backend.rs  test_mock_backend.rs.pass  test_proxy_actor.rs  test_settings.rs
redis-actor/: Cargo.toml
redis-actor/src/: actor.rs  error.rs
redis-actor/tests/: integration_test.rs
(+177 files in other folders)
