[workspace]
resolver = "2"

members = [
    "hitbox",
    "hitbox-backend",
    "hitbox-core",
    "hitbox-redis",
    "hitbox-feoxdb",
    # "hitbox-stretto",
    "hitbox-tower",
    "hitbox-moka",
    # "hitbox-tarantool",
    "hitbox-test",
    "examples",
    "hitbox-configuration",
]

[workspace.package]
rust-version = "1.89"

[workspace.dependencies]
# Core async and trait dependencies
async-trait = "0.1"
tokio = { version = "1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.7"
bitcode = { version = "0.6", features = ["serde"] }
bincode = { version = "2", features = ["serde"] }

# HTTP and web
http = "1.3"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.6", default-features = false }
axum = "0.8"
tower = "0.5"
bytes = "1"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# Error handling and utilities
thiserror = "2"
tracing = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
pin-project = "1"
regex = "1"

# Benchmarking (dev dependencies)
criterion = "0.7"

# Hurl dependencies - our fork
hurl = { git = "https://github.com/hit-box/hurl.git", branch = "master" }
hurl_core = { git = "https://github.com/hit-box/hurl.git", branch = "master" }
