[package]
name = "actix-cache-redis"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"
description = "Actix-cache redis backend actor."
license-file = "LICENSE"
workspace = ".."

[dependencies]
actix-cache-backend = "0.1"
actix = "0.9"
log = "0.4"
redis = { version = "0.17", features = ["tokio-rt-core", "connection-manager"] }
actix_derive = "0.5"
actix-rt = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["time"] }
