[package]
name = "hitbox-examples"
version = "0.0.0"
publish = false
edition = "2021"
autoexamples = false

[features]
default = []

[dev-dependencies]
hitbox = { path = "../hitbox", features = ["metrics"] }
hitbox-backend = { path = "../hitbox-backend" }
hitbox-tower = { path = "../hitbox-tower" }
hitbox-redis = { path = "../hitbox-redis" }
hitbox-stretto = { path = "../hitbox-stretto" }
actix = "0.13"
axum = "0.6"
log = "0.4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
http = "0.2"
lazy_static = "1"

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "tower"
path = "examples/tower.rs"
