[package]
name = "hitbox-examples"
version = "0.0.0"
publish = false
edition = "2021"
autoexamples = false

[features]
default = []

[dev-dependencies]
hitbox = { path = "../hitbox", features = ["metrics"] }
hitbox-backend = { path = "../hitbox-backend" }
hitbox-tower = { path = "../hitbox-tower" }
hitbox-moka = { path = "../hitbox-moka" }
hitbox-redis = { path = "../hitbox-redis" }
hitbox-configuration = { path = "../hitbox-configuration" }

# hitbox-stretto = { path = "../hitbox-stretto" }
actix = "0.13"
axum = "0.8"
log = "0.4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
serde_json = "1"
serde_yaml = "0.9"
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }
http = "1.3"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
lazy_static = "1"
erased-serde = "0.4"

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "tower"
path = "examples/tower.rs"

# [[example]]
# name = "dyn-backend"
# path = "examples/dyn_backend.rs"
#
# [[example]]
# name = "backend"
# path = "examples/backend.rs"
