[package]
name = "hitbox-actix"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hitbox = { path = "../hitbox" } 
hitbox-backend = { path = "../hitbox-backend" }
hitbox-redis = { path = "../hitbox-redis", optional = true }
actix = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1.0.64"

[features]
default = ["redis", "derive"]

redis = ["hitbox-redis"]
derive = ["hitbox/derive"]

[dev-dependencies]
actix-rt = "2"
