[package]
name = "hitbox-actix"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
license = "MIT"
edition = "2018"
description = "Asynchronous caching framework for Actix."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "actix", "async", "cache-backend", "hitbox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hitbox-redis = { path = "../hitbox-redis", version = "0.1", optional = true }
actix = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1.0.64"

[dev-dependencies]
actix-rt = "1.1"

[features]
default = ["redis", "derive"]

redis = ["hitbox-redis"]
derive = ["hitbox/derive"]
