[package]
name = "hitbox-backend"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2021"
description = "Backend trait for asynchronous caching framework in Rust."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "actix", "async", "cache-backend", "hitbox"]

[dependencies]
hitbox-core = { path = "../hitbox-core", version = "0.1.0" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
serde_urlencoded = { version = "0.7.1", default-features = false }
