[package]
name = "hitbox-backend"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2024"
rust-version.workspace = true
description = "Backend trait for asynchronous caching framework in Rust."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "actix", "async", "cache-backend", "hitbox"]

[dependencies]
hitbox-core = { path = "../hitbox-core", version = "0.1.0" }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
bincode = { workspace = true }
bitcode = { workspace = true }
thiserror = { workspace = true }
serde_urlencoded = { version = "0.7.1", default-features = false }
flate2 = { version = "1" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "key_size"
harness = false
