[package]
name = "hitbox-configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
hitbox = { path = "../hitbox/" }
hitbox-core = { path = "../hitbox-core/" }
hitbox-http = { path = "../hitbox-http/" }
http = "1"
hyper = "1.6"
async-trait = "0.1"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
serde-saphyr = "0.0.6"
indexmap = { version = "2.10", features = ["serde"] }
thiserror = "2"
regex = "1"


[dev-dependencies]
pretty_assertions = "1.4"
tokio = { version = "1", features = [
    "test-util",
    "macros",
], default-features = false }
bytes = "1"
hitbox = { path = "../hitbox", version = "0.1" }
http-body-util = "0.1"
