[package]
name = "hitbox-configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
hitbox = { path = "../hitbox/" }
hitbox-core = { path = "../hitbox-core/" }
hitbox-http = { path = "../hitbox-http/" }
http = { workspace = true }
hyper = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
indexmap = { version = "2.10", features = ["serde"] }
thiserror = { workspace = true }
regex = { workspace = true }


[dev-dependencies]
pretty_assertions = "1.4"
tokio = { workspace = true, features = ["test-util", "macros"] }
bytes = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
http-body-util = { workspace = true }
