[package]
name = "hitbox-configuration"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
hitbox = { path = "../hitbox/" }
hitbox-core = { path = "../hitbox-core/" }
hitbox-http = { path = "../hitbox-http/" }
hitbox-backend = { path = "../hitbox-backend/" }
hitbox-moka = { path = "../hitbox-moka/", optional = true }
hitbox-feoxdb = { path = "../hitbox-feoxdb/", optional = true }
hitbox-redis = { path = "../hitbox-redis/", optional = true }
http = { workspace = true }
hyper = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
indexmap = { version = "2.10", features = ["serde"] }
thiserror = { workspace = true }
regex = { workspace = true }
schemars = { version = "0.8", features = ["indexmap2"] }
jsonschema = { version = "0.26", optional = true }
yaml-rust = { version = "0.4", optional = true }
strsim = { version = "0.11", optional = true }

[features]
default = ["validation"]
validation = ["jsonschema", "yaml-rust", "strsim"]
moka = ["hitbox-moka"]
feoxdb = ["hitbox-feoxdb"]
redis = ["hitbox-redis"]
gzip = ["hitbox-backend/gzip"]
zstd = ["hitbox-backend/zstd"]


[dev-dependencies]
pretty_assertions = "1.4"
tokio = { workspace = true, features = ["test-util", "macros"] }
bytes = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
http-body-util = { workspace = true }
