[package]
name = "hitbox-core"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2024"
description = "Asynchronous caching framework core traits."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]


[dependencies]
async-trait = "0.1.73"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6", features = ["derive"] }

[features]
default = []
# Enable test helpers for integration testing (used by hitbox-test)
test-helpers = []

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
