[package]
name = "hitbox-core"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2024"
description = "Asynchronous caching framework core traits."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]


[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
serde = { workspace = true }
bitcode = { workspace = true, features = ["derive"] }

[features]
default = []
# Enable test helpers for integration testing (used by hitbox-test)
test-helpers = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
