[package]
name = "hitbox-derive"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>", "Belousow Makc <lib.bmw@gmail.com>"]
edition = "2018"

[dependencies]
syn = { version = "1", features = ["derive"] }
quote = "1"
serde = "1"
proc-macro2 = "1"

[lib]
name = "hitbox_derive"
proc-macro = true
