[package]
name = "hitbox-derive"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
license = "MIT"
edition = "2018"
description = "Derive macros for asynchronous caching framework in Rust."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "actix", "async", "cache-backend", "actix-cache", "hitbox"]

[dependencies]
syn = { version = "1", features = ["derive"] }
quote = "1"
serde = "1"
proc-macro2 = "1"

[lib]
name = "hitbox_derive"
proc-macro = true
