[package]
name = "hitbox-http"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
edition = "2021"
description = "Cacheable HTTP Request and Response"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "web-programming",
    "network-programming",
]
keywords = ["cache", "async", "http", "hitbox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bytes = "0.11"
async-trait = "0.1"
http = "0.2"
http-body = "0.4"
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
bytes = "1"
chrono = "0.4"
hyper = { version = "0.14", features = ["stream"] }
futures = { version = "0.3", default-features = false }
actix-router = "0.5"
serde_qs = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = [ "serde_json" ] }

[dev-dependencies]
tokio = { version = "1", features = [
    "test-util",
    "macros",
], default-features = false }
