[package]
name = "hitbox-http"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
edition = "2021"
description = "Cacheable HTTP Request and Response"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "web-programming",
    "network-programming",
]
keywords = ["cache", "async", "http", "hitbox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bytes = "0.11"
async-trait = "0.1"
http = "1.3"
http-body = "1"
http-body-util = "0.1"
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
bytes = "1"
chrono = "0.4"
hyper = { version = "1.6" }
futures = { version = "0.3", default-features = false }
actix-router = "0.5"
serde_qs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = ["serde_json"] }
prost = "0.13"
prost-reflect = { version = "0.15", features = ["serde", "derive"] }
protox = "0.8"
regex = "1"

# test for axum body
axum = "0.8"
http-serde = "2.1.1"

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
tokio = { version = "1", features = [
    "test-util",
    "macros",
], default-features = false }
