[package]
name = "hitbox-http"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
edition = "2024"
rust-version.workspace = true
description = "Cacheable HTTP Request and Response"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "web-programming",
    "network-programming",
]
keywords = ["cache", "async", "http", "hitbox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bytes = "0.11"
async-trait = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
bytes = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
actix-router = "0.5"
serde_qs = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = ["serde_json"] }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde", "derive"] }
protox = "0.9"
regex = { workspace = true }

# test for axum body
axum = { workspace = true }
http-serde = "2.1.1"

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
tokio = { workspace = true, features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }

[[bench]]
name = "predicate_performance"
harness = false
