[package]
name = "hitbox-moka"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
hitbox = { path = "../hitbox", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
moka = { version = "0.12.10", features = ["future"]  }
chrono = { workspace = true, features = ["clock"] }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "test-util", "rt-multi-thread"] }
