[package]
name = "hitbox-redis"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
license = "MIT"
edition = "2021"
description = "Hitbox redis backend."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "redis"]

[dependencies]
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
actix = "0.13"
log = "0.4"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
actix_derive = "0.6"
actix-rt = "2"
thiserror = "1"
async-trait = "0.1.52"
serde = "1.0.136"
tokio = "1.17.0"
tracing = { version = "0.1.32", default-features = false }

[dev-dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
test-log = { version = "0.2.8", features = ["trace"] }
tokio = { version = "1", features = ["time", "macros", "test-util", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
