[package]
name = "hitbox-redis"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2021"
description = "Hitbox redis backend."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "redis"]

[dependencies]
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
hitbox = { path = "../hitbox", version = "0.1.0" }
log = "0.4"
thiserror = "1"
async-trait = "0.1"
serde = "1"
tokio = "1"
tracing = { version = "0.1", default-features = false }
fred = { version = "6.3.0" }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = [
    "time",
    "macros",
    "test-util",
    "rt-multi-thread",
] }
