[package]
name = "hitbox-redis"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2021"
description = "Hitbox redis backend."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "redis"]

[dependencies]
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
hitbox = { path = "../hitbox", version = "0.1.0" }
log = "0.4"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# TODO: move to dev dependencies
chrono = { workspace = true }

[dev-dependencies]
# chrono = { workspace = true }
tokio = { workspace = true, features = [
    "time",
    "macros",
    "test-util",
    "rt-multi-thread",
] }
