[package]
edition = "2021"
name = "hitbox-test"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
description = "Hitbox integration tests"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-core = { path = "../hitbox-core", version = "0.1", features = ["test-helpers"] }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hitbox-moka = { path = "../hitbox-moka", version = "0.1" }
hitbox-tower = { path = "../hitbox-tower", version = "0.1" }
hitbox-configuration = { path = "../hitbox-configuration", version = "0.1" }
chrono = "0.4"
async-trait = "0.1"

futures = "0.3"
tower = "0.5"
http = "1.3"
bytes = "1"
axum = { version = "0.8", features = ["macros"] }
axum-test = "17.3"
reqwest = "0.12"
cucumber = { version = "0.21" }
serde-saphyr = "0.0.6"
anyhow = "1"
hurl_core = { path = "../../hurl/packages/hurl_core/" }
hurl = { path = "../../hurl/packages/hurl/" }
http-body-util = "0.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
dashmap = { version = "6.1", features = ["serde"] }
pretty_assertions = "1.4"
assert-json-diff = "2.0"
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = ["serde_json"] }
serial_test = "3.2"

[[test]]
name = "integration"
harness = false
