[package]
name = "hitbox-tokio"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>", "Andrey Ermilov <andrerm@ya.ru>"]
license = "MIT"
edition = "2018"
description = "Hitbox cache framework tokio integration."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]

[dependencies]
hitbox = { path = "../hitbox", version = "0.1.0" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1.0" }
hitbox-derive = { path = "../hitbox-derive", version = "0.1.0", optional = true }
hitbox-redis = { path = "../hitbox-redis", version = "0.1.0"}
tokio = { version = "1.17.0", features = ["macros"] }
async-trait = "0.1.52"
tracing = { version = "0.1.32", default-features = false }
serde = "1.0.136"

[features]
default = []
derive = ["hitbox-derive"]

[dev-dependencies]
env_logger = "0.9.0"
test-log = { version = "0.2.8", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
# metrics = ["prometheus", "lazy_static"]
