[package]
edition = "2021"
name = "hitbox-tower"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
description = "Hitbox integration for Tower framework"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous", "network-programming", "web-programming"]
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
tower = "0.4"
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-redis = { path = "../hitbox-redis", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hyper = { version = "0.14", default-features = false }
http = "0.2"
serde = "1"
futures = "0.3"
pin-project = "1"
chrono = "0.4"
bytes = "1"
